@@ -9,14 +9,17 @@ import com.jelly.MightyMiner.render.BlockRenderer;
 import com.jelly.MightyMiner.baritone.structures.GridEnvironment;
 import com.jelly.MightyMiner.baritone.structures.Node;
 import com.jelly.MightyMiner.utils.AngleUtils;
+import com.jelly.MightyMiner.utils.BlockUtils;
 import net.minecraft.client.Minecraft;
 import net.minecraft.util.BlockPos;
 import net.minecraft.util.ChatComponentText;
 import net.minecraft.util.EnumChatFormatting;
+import net.minecraftforge.client.event.RenderGameOverlayEvent;
 import net.minecraftforge.fml.common.gameevent.TickEvent;
 
 import java.awt.*;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class WalkBaritone{
@@ -34,17 +37,9 @@ public class WalkBaritone{
     // program coverts world coordinates to custom grid first
     // custom grid starts takes X as [0, y, 0]
     // player starts on K initially [maxX/2, y, maxZ/2]
-    GridEnvironment<Node> gridEnvironment = new GridEnvironment<>();
     Minecraft mc= Minecraft.getMinecraft();
 
-    int maxX = 10000;
-    int maxY = 256;
-    int maxZ = 10000;
-
-    List<Node> checkedNodes = new ArrayList<>();
-    List<Node> openNodes = new ArrayList<>();
-    List<BlockPos> blocksToWalk = new ArrayList<>();
-    int step = 0;
+    LinkedList<BlockPos> blocksToWalk = new LinkedList<>();
 
     boolean walking;
 
@@ -56,12 +51,8 @@ public class WalkBaritone{
 
 
     private void clearBlocksToWalk(){
-        openNodes.clear();
-        checkedNodes.clear();
         blocksToWalk.clear();
-        gridEnvironment.clear();
         BlockRenderer.renderMap.clear();
-        step = 0;
     }
 
 
@@ -84,9 +75,23 @@ public class WalkBaritone{
     }
 
 
+
     public void disableBaritone() {
         walking = false;
         clearBlocksToWalk();
+    }
+
+
+    public void onOverlayRenderEvent(RenderGameOverlayEvent event){
+        if(event.type == RenderGameOverlayEvent.ElementType.TEXT){
+            if(blocksToWalk != null){
+                if(!blocksToWalk.isEmpty()){
+                    for(int i = 0; i < blocksToWalk.size(); i++){
+                        mc.fontRendererObj.drawString(blocksToWalk.get(i).toString() , 5, 5 + 10 * i, -1);
+                    }
+                }
+            }
+        }
     }
 
     public void onTickEvent(TickEvent.Phase phase){
@@ -95,36 +100,36 @@ public class WalkBaritone{
             return;
 
         if(walking) {
-            if (!rotation.completed) {
+            if (rotation.rotating) {
                 KeybindHandler.resetKeybindState();
                 return;
             }
           //  KeybindHandler.setKeyBindState(KeybindHandler.keyBindShift, blocksToWalk.size() <= 5 || !BlockUtils.isAStraightLine(blocksToWalk.get(blocksToWalk.size() - 1), blocksToWalk.get(blocksToWalk.size() - 3), blocksToWalk.get(blocksToWalk.size() - 5)));
-            if (Math.floor(mc.thePlayer.posX) == blocksToWalk.get(blocksToWalk.size() - 1).getX() && Math.floor(mc.thePlayer.posY) == blocksToWalk.get(blocksToWalk.size() - 1).getY() && Math.floor(mc.thePlayer.posZ) == blocksToWalk.get(blocksToWalk.size() - 1).getZ()) {
+            if (BlockUtils.getPlayerLoc().equals(blocksToWalk.getLast())) {
+                BlockRenderer.renderMap.remove(blocksToWalk.getLast());
                 blocksToWalk.remove(blocksToWalk.size() - 1);
+
+                if (blocksToWalk.size() == 0) {
+                    mc.thePlayer.addChatMessage(new ChatComponentText("Finished baritone"));
+                    walking = false;
+                    KeybindHandler.resetKeybindState();
+                    disableBaritone();
+                    return;
+                }
             }
 
-            if (blocksToWalk.size() == 0) {
-                mc.thePlayer.addChatMessage(new ChatComponentText("Finished baritone"));
-                walking = false;
-                KeybindHandler.resetKeybindState();
-                disableBaritone();
-                return;
-            }
-
-            if (AngleUtils.getRelativeYawFromBlockPos(blocksToWalk.get(blocksToWalk.size() - 1)) != -1) {
-                rotation.intLockAngle((int) (AngleUtils.getClosest() + AngleUtils.getRelativeYawFromBlockPos(blocksToWalk.get(blocksToWalk.size() - 1))), 0, 500);
-                if (blocksToWalk.get(blocksToWalk.size() - 1).getY() != (int) mc.thePlayer.posY) {
-                    if (rotation.completed) {
-                        deltaJumpTick = 3;
-                    }
+            rotation.intLockAngle((AngleUtils.getRequiredYaw(blocksToWalk.getLast())), 0, 500);
+            if (blocksToWalk.getLast().getY() > (int) mc.thePlayer.posY) {
+                if (rotation.completed) {
+                    deltaJumpTick = 3;
                 }
             }
             if (deltaJumpTick > 0) {
                 deltaJumpTick--;
                 KeybindHandler.setKeyBindState(KeybindHandler.keyBindJump, true);
             } else   KeybindHandler.setKeyBindState(KeybindHandler.keyBindJump, false);
-            KeybindHandler.setKeyBindState(KeybindHandler.keybindW, rotation.completed);
+
+            KeybindHandler.setKeyBindState(KeybindHandler.keybindW, !rotation.rotating);
         }
 
     }
